Fixed Lombok issue with Java 21 by updating pom.xml